--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <option value="default">Filter by Keyword</option>
         </select>
     </header>
-    <main>
+    <main id="main">
         <section id="photo-template">
             <h2></h2>
             <img src="" alt="">
