--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
     <header>
         <h1>The Gallery of Horns</h1>
         <select id="drop-list">
-            <option value="default">Filter by Keyword</option>
+            <!-- <option value="default">Filter by Keyword</option> -->
+            <option value="all">All</option>
         </select>
+        <button id="page-1" value="page-2.json">Page 1</button>
+        <!-- <button id="page-2">Page 2</button> -->
     </header>
     <main id="main">
-        <section id="photo-template">
-            <h2></h2>
-            <img src="" alt="">
-            <p></p>
-        </section>
+        <template id="photo-template">
+            <section>
+                <h2>{{title}}</h2>
+                <img src={{img}}>
+                <p>{{description}}</p>
+            </section>
+        </template>
     </main>
     <footer>
         &copy; 2018 Code Fellows
     </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://unpkg.com/mustache@latest"></script>
     <script src="js/app.js"></script>
 </body>
 
