--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <option value="all">All</option>
         </select>
         <button id="page-1" value="page-2.json">Page 1</button>
+        <button id="title" value="title">Sort byTitle</button>
+        <button id="horns" value="horns">Sort by Horns</button>
+
         <!-- <button id="page-2">Page 2</button> -->
     </header>
     <main id="main">
