--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- <option value="default">Filter by Keyword</option> -->
             <option value="all">All</option>
         </select>
-        <button id="page-1" value="page-2.json">Page 1</button>
+        <button id="page" value="page-2.json">Page 2</button>
         <button id="title" value="title">Sort byTitle</button>
         <button id="horns" value="horns">Sort by Horns</button>
 
